--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 #Important!!!: This file should be renamed to .env
 
 # Discord Bot Token
-DISCORD_TOKEN="MTQyMjE4NTYzODc1Njc0OTM5NA.Gj0zPA.DnhxxuXiNuYHFlRomKgNV-4IeCOCNotU-PZSaU"
+DISCORD_TOKEN=""
 
 #Guild ID
-GUILD="1393259626610557130"
+GUILD=""
