--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 #Important!!!: This file should be renamed to .env
 
 # Discord Bot Token
-DISCORD_TOKEN=""
+DISCORD_TOKEN="YOUR_BOT_TOKEN_HERE"
 
 #Guild ID
-GUILD=""
+GUILD_ID="YOUR_GUILD_ID"
